Starting commit with code from the earlier version of this project

--- a/StrikingInvestigation/Pages/Index.razor
+++ b/StrikingInvestigation/Pages/Index.razor
@@ -1,7 +1,70 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<div class="ml-3 mt-3">
+    <h1>Striking Investigation</h1>
 
-Welcome to your new app.
+    <br />
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+    <p style="max-width: 800px">
+        This website lets ringers specify when their bell should strike following a series of blows with
+        striking errors.
+        The aim is to determine whether ringers generally agree on the correct point in time to strike a bell
+        when the preceding blows are not evenly struck.
+    </p>
+
+    <p style="max-width: 800px">
+        There are also two other tests:
+    </p>
+
+    <ul style="max-width: 800px">
+        <li class="mb-3">
+            An A/B test to determine how small a striking error ringers can detect; and
+        </li>
+
+        <li>
+            An A/V test to see if ringers respond to audio and visual cues in the same way.
+        </li>
+    </ul>
+
+    <br />
+
+    <p style="max-width: 800px">
+        <u>Select Gap:</u> This allows a user to create a block of rows with random striking errors,
+        and then specify where their bell (the last bell) should strike.
+    </p>
+
+    <br />
+
+    <p style="max-width: 800px">
+        <u>A/B Test:</u> The same block of rows is played twice, once with errors and once without.
+        The user attempts to detect which block has the errors.
+    </p>
+
+    <br />
+
+    <p style="max-width: 800px">
+        <u>A/V Test:</u> A bell will be heard to strike, and a visual representation of the strike
+        will appear on the screen. The user adjusts the position of the bell on the screen until
+        the audio and visual components are sensed at the same time.
+    </p>
+
+    <br />
+
+    <p style="max-width: 800px">
+        <u>Submissions:</u> Not yet implemented. This page will show striking result data that the user has submitted
+        to the central server.
+    </p>
+
+    <br />
+
+    <p style="max-width: 800px">
+        <u>Privacy:</u> Not yet implemented. This page will explain how striking result data submitted
+        to the central server will be used, and how the user's privacy will be protected.
+    </p>
+
+    <br />
+
+    <p style="max-width: 800px">
+        <u>Account:</u> Not yet implemented. This page will be where users log in and maintain their accounts.
+    </p>
+</div>
