--- a/StrikingInvestigation/wwwroot/css/app.css
+++ b/StrikingInvestigation/wwwroot/css/app.css
@@ -20,12 +20,15 @@ app {
     flex-direction: column;
 }
 
+/* top-row class removed from NavMenu.razor
 .top-row {
     height: 3.5rem;
     display: flex;
     align-items: center;
 }
+*/
 
+/* main class removed from MainLayout.razor
 .main {
     flex: 1;
 }
@@ -41,11 +44,13 @@ app {
             margin-left: 1.5rem;
         }
 
-.main .top-row a:first-child {
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
+        .main .top-row a:first-child {
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+*/
 
+/* sidebar class removed from MainLayout.razor
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 }
@@ -96,15 +101,21 @@ app {
                 background-color: rgba(255,255,255,0.1);
                 color: white;
             }
+*/
 
+/* Don't think this is needed
 .content {
     padding-top: 1.1rem;
 }
+*/
 
+/* Not needed as we're not using a toggler
 .navbar-toggler {
     background-color: rgba(255, 255, 255, 0.1);
 }
+*/
 
+/* The following three classes are probably used by Blazor components when they render form elements */
 .valid.modified:not([type=checkbox]) {
     outline: 1px solid #26b050;
 }
@@ -117,6 +128,7 @@ app {
     color: red;
 }
 
+/* Used by index.html */
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
@@ -129,6 +141,7 @@ app {
     z-index: 1000;
 }
 
+/* Used by index.html */
 #blazor-error-ui .dismiss {
     cursor: pointer;
     position: absolute;
@@ -136,6 +149,7 @@ app {
     top: 0.5rem;
 }
 
+/* Not needed as not doing media inquiries
 @media (max-width: 767.98px) {
     .main .top-row:not(.auth) {
         display: none;
@@ -177,7 +191,233 @@ app {
     }
 
     .sidebar .collapse {
-        /* Never collapse the sidebar for wide screens */
+        Never collapse the sidebar for wide screens  *** Add back comment delimters here if uncomment this whole block
         display: block;
+    }
+}
+*/
+
+/* These items are added by me */
+
+h1 {
+    font-size: 20px;
+    margin-top: 8px;
+}
+
+h2 {
+    font-size: 19px;
+    margin-top: 6px
+}
+
+h3 {
+    font-size: 18px;
+}
+
+h4 {
+    font-size: 17px;
+}
+
+h5 {
+    font-size: 16px;
+}
+
+h6 {
+    font-size: 15px;
+}
+
+/* topbar is used in NavMenu.razor */
+.topbar {
+    height: 50px;
+    width: auto;
+    background-image: linear-gradient(90deg, rgba(58, 6, 71, 0.9), rgba(5, 39, 103, 1));
+}
+
+    .topbar .navbar-brand {
+        font-size: 18px;
+        color: white;
+    }
+
+    .topbar .nav-item {
+        font-size: 14px;
+        padding-bottom: 8px;
+    }
+
+        .topbar .nav-item .oi {
+            width: 27px;
+            font-size: 18px;
+            vertical-align: text-top;
+            top: -2px;
+        }
+
+        .topbar .nav-item a {
+            color: #d7d7d7;
+            border-radius: 4px;
+            align-items: center;
+        }
+
+            .topbar .nav-item a.active {
+                background-color: rgba(255, 255, 255, 0.3);
+                color: white;
+            }
+
+            .topbar .nav-item a:hover {
+                background-color: rgba(255, 255, 255, 0.15);
+                color: white;
+            }
+
+.spinner {
+    border: 16px solid silver;
+    border-top: 16px solid #337AB7;
+    border-radius: 50%;
+    left: 550px;
+    top: 450px;
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    animation: spin 700ms linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg)
+    }
+
+    100% {
+        transform: rotate(360deg)
+    }
+}
+
+.posabs {
+    left: var(--leftpos);
+    top: var(--toppos);
+    position: absolute;
+    user-select: none;
+}
+
+.posabsw {
+    left: var(--leftpos);
+    top: var(--toppos);
+    width: var(--width);
+    position: absolute;
+    user-select: none;
+}
+
+.posabswh {
+    left: var(--leftpos);
+    top: var(--toppos);
+    width: var(--width);
+    height: var(--height);
+    position: absolute;
+    user-select: none;
+}
+
+.bell {
+    box-sizing: border-box;
+    border: 10px solid var(--color);
+    border-radius: 50%;
+    left: var(--leftpos);
+    top: var(--toppos);
+    width: var(--diameter);
+    height: var(--diameter);
+    position: absolute;
+    user-select: none;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: var(--padding);
+}
+
+.strokelabel {
+    font-size: 24px;
+    font-weight: bold;
+    color: silver;
+    left: var(--leftpos);
+    top: var(--toppos);
+    position: absolute;
+    user-select: none;
+}
+
+.changelabel {
+    left: var(--leftpos);
+    top: var(--toppos);
+    position: absolute;
+    user-select: none;
+}
+
+.rowstartlabel {
+    box-sizing: content-box;
+    border-left: 6px dashed silver;
+    left: var(--leftpos);
+    top: var(--toppos);
+    width: 0px;
+    height: 60px;
+    position: absolute;
+}
+
+.boundarylabel {
+    box-sizing: border-box;
+    border: 3px dotted silver;
+    left: var(--leftpos);
+    top: var(--toppos);
+    width: var(--width);
+    height: var(--height);
+    position: absolute;
+    z-index: -1;
+}
+
+.gaplabel {
+    font-size: small;
+    background-color: var(--bgcolor);
+    left: var(--leftpos);
+    top: var(--toppos);
+    width: 22px;
+    height: 18px;
+    position: absolute;
+    user-select: none;
+}
+
+.audiobar {
+    box-sizing: content-box;
+    border-top: 6px solid silver;
+    left: var(--leftpos);
+    top: var(--toppos);
+    width: var(--width);
+    height: 0px;
+    position: absolute;
+}
+
+.audiodotinitial {
+    box-sizing: content-box;
+    border-radius: 50%;
+    left: var(--leftpos);
+    top: var(--toppos);
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    background-color: gray;
+}
+
+.audiodotmove {
+    box-sizing: content-box;
+    border-radius: 50%;
+    left: var(--leftendpos);
+    top: var(--toppos);
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    background-color: #A00000;
+    animation-name: slide;
+    animation-duration: var(--duration);
+    animation-timing-function: linear;
+    animation-iteration-count: 1;
+}
+
+@keyframes slide {
+    0% {
+        left: var(--leftstartpos)
+    }
+
+    100% {
+        left: var(--leftendpos)
     }
 }
