--- a/StrikingInvestigation/Shared/NavMenu.razor
+++ b/StrikingInvestigation/Shared/NavMenu.razor
@@ -1,37 +1,63 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">StrikingInvestigation</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</div>
+﻿<div class="topbar navbar">
+    <a class="navbar-brand posabs" style="--leftpos: 10px; --toppos: 8px" href="">
+        Striking Investigation
+    </a>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+    <ul class="nav">
+        <li class="nav-item">
+            <NavLink class="nav-link posabswh"
+                     style="--leftpos: 200px; --toppos: 7px; --width: 110px; height: 36px"
+                     href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+
+        <li class="nav-item">
+            <NavLink class="nav-link posabswh"
+                     style="--leftpos: 325px; --toppos: 7px; --width: 125px; height: 36px"
+                     href="gaptest" Match="NavLinkMatch.All">
+                <span class="oi oi-random" aria-hidden="true"></span> Gap Test
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+
+        <li class="nav-item">
+            <NavLink class="nav-link posabswh"
+                     style="--leftpos: 465px; --toppos: 7px; --width: 120px; height: 36px"
+                     href="abtest" Match="NavLinkMatch.All">
+                <span class="oi oi-media-play" aria-hidden="true"></span> A/B Test
+            </NavLink>
+        </li>
+
+        <li class="nav-item">
+            <NavLink class="nav-link posabswh"
+                     style="--leftpos: 600px; --toppos: 7px; --width: 120px; height: 36px"
+                     href="avtest" Match="NavLinkMatch.All">
+                <span class="oi oi-eye" aria-hidden="true"></span> A/V Test
+            </NavLink>
+        </li>
+
+        <li class="nav-item">
+            <NavLink class="nav-link posabswh"
+                     style="--leftpos: 735px; --toppos: 7px; --width: 145px; height: 36px"
+                     href="submissions" Match="NavLinkMatch.All">
+                <span class="oi oi-data-transfer-upload" aria-hidden="true"></span> Submissions
+            </NavLink>
+        </li>
+
+        <li class="nav-item">
+            <NavLink class="nav-link posabswh"
+                     style="--leftpos: 895px; --toppos: 7px; --width: 120px; height: 36px"
+                     href="privacy" Match="NavLinkMatch.All">
+                <span class="oi oi-document" aria-hidden="true"></span> Privacy
+            </NavLink>
+        </li>
+
+        <li class="nav-item">
+            <NavLink class="nav-link posabswh"
+                     style="--leftpos: 1030px; --toppos: 7px; --width: 120px; height: 36px"
+                     href="account" Match="NavLinkMatch.All">
+                <span class="oi oi-account-login" aria-hidden="true"></span> Account
             </NavLink>
         </li>
     </ul>
 </div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
