--- a/StrikingInvestigation/wwwroot/css/app.css
+++ b/StrikingInvestigation/wwwroot/css/app.css
@@ -277,6 +277,20 @@ h6 {
     animation: spin 700ms linear infinite;
 }
 
+.spinnerinline {
+    box-sizing: border-box;
+    border-width: var(--borderwidth);
+    border-style: solid;
+    border-color: silver;
+    border-top-width: var(--borderwidth);
+    border-top-style: solid;
+    border-top-color: #337AB7;
+    border-radius: 50%;
+    width: var(--width);
+    height: var(--height);
+    animation: spin 700ms linear infinite;
+}
+
 @keyframes spin {
     0% {
         transform: rotate(0deg)
