--- a/StrikingInvestigation/Shared/PlayBtn.razor
+++ b/StrikingInvestigation/Shared/PlayBtn.razor
@@ -1,5 +1,10 @@
-﻿<div class="posabs" style="--leftpos: @LeftPos; --toppos: @TopPos">
-    <button class="btn btn-primary" @onclick="PlayClick" style="width: 75px" disabled="@PlayDisabled">
+﻿<div class="posabs"
+        style="--leftpos: @LeftPos;
+                --toppos: @TopPos">
+    <button class="btn btn-primary"
+            @onclick="PlayClick"
+            style="width: 75px"
+            disabled="@PlayDisabled">
         @PlayLabel
     </button>
 </div>
