Removed the audio box animation and replaced with a text message (was overloading the processor on less powerful machines)

--- a/StrikingInvestigation/Pages/ABTest.razor
+++ b/StrikingInvestigation/Pages/ABTest.razor
@@ -224,9 +224,8 @@ else
         }
         else
         {
-            <AudioBox TestSpec="@TestSpec"
-                    Screen="@ScreenA"
-                    Duration="@DurationA" />
+            <AudioBox2 TestSpec="@TestSpec"
+                    Screen="@ScreenA" />
         }
 
         <audio id="@blow.AudioId" preload="auto">
@@ -274,9 +273,8 @@ else
         }
         else
         {
-            <AudioBox TestSpec="@TestSpec"
-                    Screen="@ScreenB"
-                    Duration="@DurationB" />
+            <AudioBox2 TestSpec="@TestSpec"
+                    Screen="@ScreenB" />
         }
 
         <audio id="@blow.AudioId" preload="auto">
